# Django_API

./: .gitignore  pyproject.toml
core/: urls.py
core/migrations/: 0001_initial.py
core/templates/core/: index.html
likes/migrations/: 0001_initial.py
playground/: tasks.py  views.py
playground/templates/emails/: hello.html
store/: admin.py  validators.py  views.py
store/migrations/: 0001_initial.py  0002_productimage.py  0003_alter_productimage_image.py
store/tests/: test_collections.py
storefront/: celery.py  settings.py  urls.py
storefront/locustfiles/: browse_products.py
storefront/settings/: common.py  dev.py  prod.py
tags/migrations/: 0001_initial.py
