[tool.poetry]
name = "mosh2"
version = "0.1.0"
description = ""
authors = ["inessochan <iness0chan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
pip = "^22.3.1"
install = "^1.3.5"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
djoser = "^2.1.0"
django-debug-toolbar = "^3.8.1"
psycopg2 = "^2.9.5"
drf-nested-routers = "^0.93.4"
pillow = "^9.4.0"
django-cors-headers = "^3.13.0"
django-templated-mail = "^1.1.1"
celery = "^5.2.7"
redis = "^4.4.2"
flower = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
